--- a/frontend/pages/settings.html
+++ b/frontend/pages/settings.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name-="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings - CostInsight</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <h1>CostInsight</h1>
         <nav>
-            <a href="/">Dashboard</a>
-            <a href="/settings.html">Settings</a>
+            <a href="../pages/dashboard.html">Dashboard</a>
+            <a href="../pages/settings.html">Settings</a>
         </nav>
     </header>
     <main>
@@ -48,6 +48,6 @@
             </form>
         </section>
     </main>
-    <script src="/js/settings.js"></script>
+    <script src="../scripts/settings.js"></script>
 </body>
 </html>
